--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 Content/Maps/LandscapeMap.umap
+Content/Maps/LandscapeMap.umap
