--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+GameDefaultMap=/Game/Maps/LandscapeMap.LandscapeMap
+EditorStartupMap=/Game/Maps/LandscapeMap.LandscapeMap
 GlobalDefaultGameMode=/Script/CPP_Project.CPP_ProjectGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -126,5 +126,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
